sqlite3/lib/src/ffi/generated/native.dart


@ffi.Native<
    ffi.Int Function(
        ffi.Pointer<imp$1.sqlite3>,
        ffi.Pointer<imp$1.sqlite3_char>,
        ffi.Int,
        ffi.Int,
        ffi.Pointer<ffi.Void>,
        ffi.Pointer<
            ffi.NativeFunction<
                ffi.Void Function(ffi.Pointer<imp$1.sqlite3_context>, ffi.Int,
                    ffi.Pointer<ffi.Pointer<imp$1.sqlite3_value>>)>>,
        ffi.Pointer<
            ffi.NativeFunction<
                ffi.Void Function(ffi.Pointer<imp$1.sqlite3_context>, ffi.Int,
                    ffi.Pointer<ffi.Pointer<imp$1.sqlite3_value>>)>>,
        ffi.Pointer<
            ffi.NativeFunction<
                ffi.Void Function(ffi.Pointer<imp$1.sqlite3_context>)>>,
        ffi.Pointer<
            ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>)>()
external int sqlite3_create_function_v2(
  ffi.Pointer<imp$1.sqlite3> db,
  ffi.Pointer<imp$1.sqlite3_char> zFunctionName,
  int nArg,
  int eTextRep,
  ffi.Pointer<ffi.Void> pApp,
  ffi.Pointer<
          ffi.NativeFunction<
              ffi.Void Function(ffi.Pointer<imp$1.sqlite3_context>, ffi.Int,
                  ffi.Pointer<ffi.Pointer<imp$1.sqlite3_value>>)>>
      xFunc,
  ffi.Pointer<
          ffi.NativeFunction<
              ffi.Void Function(ffi.Pointer<imp$1.sqlite3_context>, ffi.Int,
                  ffi.Pointer<ffi.Pointer<imp$1.sqlite3_value>>)>>
      xStep,
  ffi.Pointer<
          ffi.NativeFunction<
              ffi.Void Function(ffi.Pointer<imp$1.sqlite3_context>)>>
      xFinal,
  ffi.Pointer<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>
      xDestroy,
);

@ffi.Native<
    ffi.Int Function(
        ffi.Pointer<imp$1.sqlite3>,
        ffi.Pointer<imp$1.sqlite3_char>,
        ffi.Int,
        ffi.Int,
        ffi.Pointer<ffi.Void>,
        ffi.Pointer<
            ffi.NativeFunction<
                ffi.Void Function(ffi.Pointer<imp$1.sqlite3_context>, ffi.Int,
                    ffi.Pointer<ffi.Pointer<imp$1.sqlite3_value>>)>>,
        ffi.Pointer<
            ffi.NativeFunction<
                ffi.Void Function(ffi.Pointer<imp$1.sqlite3_context>)>>,
        ffi.Pointer<
            ffi.NativeFunction<
                ffi.Void Function(ffi.Pointer<imp$1.sqlite3_context>)>>,
        ffi.Pointer<
            ffi.NativeFunction<
                ffi.Void Function(ffi.Pointer<imp$1.sqlite3_context>, ffi.Int,
                    ffi.Pointer<ffi.Pointer<imp$1.sqlite3_value>>)>>,
        ffi.Pointer<
            ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>)>()
external int sqlite3_create_window_function(
  ffi.Pointer<imp$1.sqlite3> db,
  ffi.Pointer<imp$1.sqlite3_char> zFunctionName,
  int nArg,
  int eTextRep,
  ffi.Pointer<ffi.Void> pApp,
  ffi.Pointer<
          ffi.NativeFunction<
              ffi.Void Function(ffi.Pointer<imp$1.sqlite3_context>, ffi.Int,
                  ffi.Pointer<ffi.Pointer<imp$1.sqlite3_value>>)>>
      xStep,
  ffi.Pointer<
          ffi.NativeFunction<
              ffi.Void Function(ffi.Pointer<imp$1.sqlite3_context>)>>
      xFinal,
  ffi.Pointer<
          ffi.NativeFunction<
              ffi.Void Function(ffi.Pointer<imp$1.sqlite3_context>)>>
      xValue,
  ffi.Pointer<
          ffi.NativeFunction<
              ffi.Void Function(ffi.Pointer<imp$1.sqlite3_context>, ffi.Int,
                  ffi.Pointer<ffi.Pointer<imp$1.sqlite3_value>>)>>
      xInverse,
  ffi.Pointer<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>
      xDestroy,
);

@ffi.Native<
    ffi.Pointer<ffi.Void> Function(
        ffi.Pointer<imp$1.sqlite3_context>, ffi.Int)>()
external ffi.Pointer<ffi.Void> sqlite3_aggregate_context(
  ffi.Pointer<imp$1.sqlite3_context> ctx,
  int nBytes,
);

@ffi.Native<
    ffi.Pointer<ffi.Void> Function(ffi.Pointer<imp$1.sqlite3_context>)>()
external ffi.Pointer<ffi.Void> sqlite3_user_data(
  ffi.Pointer<imp$1.sqlite3_context> ctx,
);

@ffi.Native<
    ffi.Void Function(ffi.Pointer<imp$1.sqlite3_context>, ffi.Pointer<ffi.Void>,
        ffi.Uint64, ffi.Pointer<ffi.Void>)>()
external void sqlite3_result_blob64(
  ffi.Pointer<imp$1.sqlite3_context> ctx,
  ffi.Pointer<ffi.Void> data,
  int length,
  ffi.Pointer<ffi.Void> destructor,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<imp$1.sqlite3_context>, ffi.Double)>()
external void sqlite3_result_double(
  ffi.Pointer<imp$1.sqlite3_context> ctx,
  double result,
);

@ffi.Native<
    ffi.Void Function(ffi.Pointer<imp$1.sqlite3_context>,
        ffi.Pointer<imp$1.sqlite3_char>, ffi.Int)>()
external void sqlite3_result_error(
  ffi.Pointer<imp$1.sqlite3_context> ctx,
  ffi.Pointer<imp$1.sqlite3_char> msg,
  int length,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<imp$1.sqlite3_context>, ffi.Int64)>()
external void sqlite3_result_int64(
  ffi.Pointer<imp$1.sqlite3_context> ctx,
  int result,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<imp$1.sqlite3_context>)>()
external void sqlite3_result_null(
  ffi.Pointer<imp$1.sqlite3_context> ctx,
);

@ffi.Native<
    ffi.Void Function(ffi.Pointer<imp$1.sqlite3_context>,
        ffi.Pointer<imp$1.sqlite3_char>, ffi.Int, ffi.Pointer<ffi.Void>)>()
external void sqlite3_result_text(
  ffi.Pointer<imp$1.sqlite3_context> ctx,
  ffi.Pointer<imp$1.sqlite3_char> data,
  int length,
  ffi.Pointer<ffi.Void> destructor,
);

@ffi.Native<
    ffi.Void Function(ffi.Pointer<imp$1.sqlite3_context>, ffi.UnsignedInt)>()
external void sqlite3_result_subtype(
  ffi.Pointer<imp$1.sqlite3_context> ctx,
  int subtype,
);

@ffi.Native<
    ffi.Int Function(
        ffi.Pointer<imp$1.sqlite3>,
        ffi.Pointer<imp$1.sqlite3_char>,
        ffi.Int,
        ffi.Pointer<ffi.Void>,
        ffi.Pointer<
            ffi.NativeFunction<
                ffi.Int Function(ffi.Pointer<ffi.Void>, ffi.Int,
                    ffi.Pointer<ffi.Void>, ffi.Int, ffi.Pointer<ffi.Void>)>>,
        ffi.Pointer<
            ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>)>()
external int sqlite3_create_collation_v2(
  ffi.Pointer<imp$1.sqlite3> arg0,
  ffi.Pointer<imp$1.sqlite3_char> zName,
  int eTextRep,
  ffi.Pointer<ffi.Void> pArg,
  ffi.Pointer<
          ffi.NativeFunction<
              ffi.Int Function(ffi.Pointer<ffi.Void>, ffi.Int,
                  ffi.Pointer<ffi.Void>, ffi.Int, ffi.Pointer<ffi.Void>)>>
      xCompare,
  ffi.Pointer<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>
      xDestroy,
);

@ffi.Native<
    ffi.Pointer<imp$1.sqlite3_backup> Function(
        ffi.Pointer<imp$1.sqlite3>,
        ffi.Pointer<imp$1.sqlite3_char>,
        ffi.Pointer<imp$1.sqlite3>,
        ffi.Pointer<imp$1.sqlite3_char>)>()
external ffi.Pointer<imp$1.sqlite3_backup> sqlite3_backup_init(
  ffi.Pointer<imp$1.sqlite3> pDestDb,
  ffi.Pointer<imp$1.sqlite3_char> zDestDb,
  ffi.Pointer<imp$1.sqlite3> pSrcDb,
  ffi.Pointer<imp$1.sqlite3_char> zSrcDb,
);

@ffi.Native<ffi.Int Function(ffi.Pointer<imp$1.sqlite3_backup>, ffi.Int)>()
external int sqlite3_backup_step(
  ffi.Pointer<imp$1.sqlite3_backup> p,
  int nPage,
);

@ffi.Native<ffi.Int Function(ffi.Pointer<imp$1.sqlite3_backup>)>()
external int sqlite3_backup_finish(
  ffi.Pointer<imp$1.sqlite3_backup> p,
);

@ffi.Native<ffi.Int Function(ffi.Pointer<imp$1.sqlite3_backup>)>()
external int sqlite3_backup_remaining(
  ffi.Pointer<imp$1.sqlite3_backup> p,
);

@ffi.Native<ffi.Int Function(ffi.Pointer<imp$1.sqlite3_backup>)>()
external int sqlite3_backup_pagecount(
  ffi.Pointer<imp$1.sqlite3_backup> p,
);

@ffi.Native<ffi.Int Function(ffi.Pointer<ffi.Void>)>()
external int sqlite3_auto_extension(
  ffi.Pointer<ffi.Void> xEntryPoint,
);

@ffi.Native<
    ffi.Int Function(
        ffi.Pointer<imp$1.sqlite3>,
        ffi.Int,
        ffi.VarArgs<
            (
              ffi.Int,
              ffi.Pointer<ffi.Int>,
            )>)>()
external int sqlite3_db_config(
  ffi.Pointer<imp$1.sqlite3> db,
  int op,
  int va,
  ffi.Pointer<ffi.Int> va$1,
);

@ffi.Native<ffi.Int Function(ffi.Pointer<imp$1.sqlite3_vfs>, ffi.Int)>()
external int sqlite3_vfs_register(
  ffi.Pointer<imp$1.sqlite3_vfs> arg0,
  int makeDflt,
);

@ffi.Native<ffi.Int Function(ffi.Pointer<imp$1.sqlite3_vfs>)>()
external int sqlite3_vfs_unregister(
  ffi.Pointer<imp$1.sqlite3_vfs> arg0,
);

@ffi.Native<
    ffi.Int Function(
        ffi.Pointer<imp$1.sqlite3>,
        ffi.Pointer<imp$1.sqlite3_char>,
        ffi.Pointer<ffi.Pointer<imp$1.sqlite3_session>>)>()
external int sqlite3session_create(
  ffi.Pointer<imp$1.sqlite3> db,
  ffi.Pointer<imp$1.sqlite3_char> zDb,
  ffi.Pointer<ffi.Pointer<imp$1.sqlite3_session>> ppSession,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<imp$1.sqlite3_session>)>()
external void sqlite3session_delete(
  ffi.Pointer<imp$1.sqlite3_session> pSession,
);

@ffi.Native<ffi.Int Function(ffi.Pointer<imp$1.sqlite3_session>, ffi.Int)>()
external int sqlite3session_enable(
  ffi.Pointer<imp$1.sqlite3_session> pSession,
  int bEnable,
);

@ffi.Native<ffi.Int Function(ffi.Pointer<imp$1.sqlite3_session>, ffi.Int)>()
external int sqlite3session_indirect(
  ffi.Pointer<imp$1.sqlite3_session> pSession,
  int bIndirect,
);

@ffi.Native<
    ffi.Int Function(ffi.Pointer<ffi.Pointer<imp$1.sqlite3_changeset_iter>>,
        ffi.Int, ffi.Pointer<ffi.Void>)>()
external int sqlite3changeset_start(
  ffi.Pointer<ffi.Pointer<imp$1.sqlite3_changeset_iter>> pp,
  int nChangeset,
  ffi.Pointer<ffi.Void> pChangeset,
);

@ffi.Native<ffi.Int Function(ffi.Pointer<imp$1.sqlite3_changeset_iter>)>()
external int sqlite3changeset_finalize(
  ffi.Pointer<imp$1.sqlite3_changeset_iter> pIter,
);

@ffi.Native<ffi.Int Function(ffi.Pointer<imp$1.sqlite3_changeset_iter>)>()
external int sqlite3changeset_next(
  ffi.Pointer<imp$1.sqlite3_changeset_iter> pIter,
);

@ffi.Native<
    ffi.Int Function(
        ffi.Pointer<imp$1.sqlite3_changeset_iter>,
        ffi.Pointer<ffi.Pointer<imp$1.sqlite3_char>>,
        ffi.Pointer<ffi.Int>,
        ffi.Pointer<ffi.Int>,
        ffi.Pointer<ffi.Int>)>()
external int sqlite3changeset_op(
  ffi.Pointer<imp$1.sqlite3_changeset_iter> pIter,
  ffi.Pointer<ffi.Pointer<imp$1.sqlite3_char>> pzTab,
  ffi.Pointer<ffi.Int> pnCol,
  ffi.Pointer<ffi.Int> pOp,
  ffi.Pointer<ffi.Int> pbIndirect,
);

@ffi.Native<
    ffi.Int Function(ffi.Pointer<imp$1.sqlite3_changeset_iter>, ffi.Int,
        ffi.Pointer<ffi.Pointer<imp$1.sqlite3_value>>)>()
external int sqlite3changeset_old(
  ffi.Pointer<imp$1.sqlite3_changeset_iter> pIter,
  int iVal,
  ffi.Pointer<ffi.Pointer<imp$1.sqlite3_value>> ppValue,
);

@ffi.Native<
    ffi.Int Function(ffi.Pointer<imp$1.sqlite3_changeset_iter>, ffi.Int,
        ffi.Pointer<ffi.Pointer<imp$1.sqlite3_value>>)>()
external int sqlite3changeset_new(
  ffi.Pointer<imp$1.sqlite3_changeset_iter> pIter,
  int iVal,
  ffi.Pointer<ffi.Pointer<imp$1.sqlite3_value>> ppValue,
);

@ffi.Native<
    ffi.Int Function(
        ffi.Pointer<imp$1.sqlite3>,
        ffi.Int,
        ffi.Pointer<ffi.Void>,
        ffi.Pointer<
            ffi.NativeFunction<
                ffi.Int Function(
                    ffi.Pointer<ffi.Void> pCtx, ffi.Pointer<ffi.Char> zTab)>>,
        ffi.Pointer<
            ffi.NativeFunction<
                ffi.Int Function(ffi.Pointer<ffi.Void> pCtx, ffi.Int eConflict,
                    ffi.Pointer<imp$1.sqlite3_changeset_iter> p)>>,
        ffi.Pointer<ffi.Void>)>()
external int sqlite3changeset_apply(
  ffi.Pointer<imp$1.sqlite3> db,
  int nChangeset,
  ffi.Pointer<ffi.Void> pChangeset,
  ffi.Pointer<
          ffi.NativeFunction<
              ffi.Int Function(
                  ffi.Pointer<ffi.Void> pCtx, ffi.Pointer<ffi.Char> zTab)>>
      xFilter,
  ffi.Pointer<
          ffi.NativeFunction<
              ffi.Int Function(ffi.Pointer<ffi.Void> pCtx, ffi.Int eConflict,
                  ffi.Pointer<imp$1.sqlite3_changeset_iter> p)>>
      xConflict,
  ffi.Pointer<ffi.Void> pCtx,
);
